package strategy.duckbehaviour.right;

public interface Flybehavior {
    void fly();
}
